--- a/chart.html
+++ b/chart.html
@@ -43,19 +43,19 @@
       Syrup: {
         id: 1216463,
         Tweek: { wins: 0, losses: 1 },
-        Pharaoh: { wins: 4, losses: 0 }
+        Marvale: { wins: 6, losses: 0 }
       },
       Tweek: {
         id: 15768,
-        Pharaoh: { wins: 0, losses: 0 },
+        Marvale: { wins: 0, losses: 0 },
         Syrup: { wins: 1, losses: 0 }
       },
-      Pharaoh: {
-        id: 1071129,
-        Syrup: { wins: 0, losses: 4 },
+      Marvale: {
+        id: 1189720,
+        Syrup: { wins: 0, losses: 6 },
         Tweek: { wins: 0, losses: 0 }
       }
-    };
+    }
 
     // Get the players
     const players = Object.keys(data);
